--- a/ShopLap_SLT/MyClass/MyClass.csproj
+++ b/ShopLap_SLT/MyClass/MyClass.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Slider.cs" />
-    <Compile Include="Models\Supplider.cs" />
+    <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Topic.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
