--- a/ShopLap_SLT/ShopLap_SLT/ShopLap_SLT.csproj
+++ b/ShopLap_SLT/ShopLap_SLT/ShopLap_SLT.csproj
@@ -2059,7 +2059,7 @@
     <Compile Include="Areas\Admin\Controllers\PostController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\SliderController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SuppliderController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SupplierController.cs" />
     <Compile Include="Areas\Admin\Controllers\TopicController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Controllers\SiteController.cs" />
@@ -2143,21 +2143,23 @@
     <Content Include="Areas\Admin\Views\Slider\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Slider\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Slider\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Supplider\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Supplider\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Supplider\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Supplider\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Supplider\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Topic\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Topic\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Topic\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Topic\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Topic\Index.cshtml" />
     <Content Include="Areas\Admin\Views\User\Create.cshtml" />
     <Content Include="Areas\Admin\Views\User\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\User\Details.cshtml" />
     <Content Include="Areas\Admin\Views\User\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\User\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Topic\Trash.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Supplier\Trash.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_LayoutSite.cshtml" />
     <Content Include="Views\Site\Index.cshtml" />
@@ -2315,6 +2317,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Public\images\products\" />
+    <Folder Include="Public\images\suppliers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyClass\MyClass.csproj">
